<resources>
    <string name="app_name">Inmbiliaria</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenido! "</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">Contraseña de mas de 5 caracteres</string>
    <string name="login_failed">"Fallo el login"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_propiedades">Propiedades</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_pagos">Pagos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_exit">Cerrar Sesion</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="domicilio">Domicilio</string>
    <string name="ambientes">Ambientes:</string>
    <string name="tipo">Tipo:</string>
    <string name="uso">Uso:</string>
    <string name="precio">Precio</string>
    <string name="disponible">Disponible:</string>
</resources>
