<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mobile.inmbiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_propiedades"
        android:name="com.mobile.inmbiliaria.ui.propiedades.PropiedadesFragment"
        android:label="@string/menu_propiedades"
        tools:layout="@layout/fragment_propiedades" />

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.mobile.inmbiliaria.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.mobile.inmbiliaria.ui.pagos.PagosFragment"
        android:label="@string/menu_pagos"
        tools:layout="@layout/fragment_pagos" />

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.mobile.inmbiliaria.ui.contratos.ContratoFragment"
        android:label="Contratos"
        tools:layout="@layout/fragment_contratos" />

    <fragment
        android:id="@+id/nav_lista_propiedades"
        android:name="com.mobile.inmbiliaria.ui.listaPropiedades.propiedades.ListaPropiedadesFragment"
        android:label="Lista Propiedades"
        tools:layout="@layout/fragment_lista_propiedades" >
        <action
            android:id="@+id/action_nav_lista_propiedades_to_nav_pagos"
            app:destination="@id/nav_pagos" />
        <action
            android:id="@+id/action_nav_lista_propiedades_to_nav_contratos"
            app:destination="@id/nav_contratos" />
    </fragment>


    <fragment
        android:id="@+id/nav_exit"
        android:name="com.mobile.inmbiliaria.ui.exit.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />
</navigation>